--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>zkclient</artifactId>
             <version>0.1</version>
         </dependency> 
+        
+        <dependency>
+       			<groupId>com.example</groupId>
+				<artifactId>Interface</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+       	</dependency>
        	
 	</dependencies> 
 	
