--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8012
+
+#setting
+setting.devMode=false
+setting.language=zh
+setting.country=CN
+setting.loginExpireSeconds=3600
+setting.token.cookie.timeout=-1
+setting.auth.error.url=/common/auth?info
+setting.unAuthUrls=/common/**;*.html;/error;/user/login;/user/getIdentifyingCode;/v2/api-docs;/swagger-resources/**
